<resources>
    <string name="app_name">ImFitPlus</string>
    <string name="main_text">Descubra seu perfil de saúde e receba recomendações personalizadas</string>
    <string name="comece_aqui">Comece aqui</string>
    <string name="data_de_nascimento">Data de Nascimento:</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome">Nome</string>
    <string name="preencha_os_dados">Preencha os dados</string>
    <string name="sexo">Sexo:</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="nivel_atividade_fisica">Nível de Atividade Física:</string>
    <string name="peso">Peso (Kg):</string>
    <string name="altura">Altura (cm):</string>
    <string name="calcular_imc">calcular IMC</string>
    <string name="none">-</string>
    <string name="calcular_gasto_cal_rico">Calcular gasto calórico</string>
    <string name="voltar">Voltar</string>
    <string name="gasto_calorico_diario">Gasto Calórico Diário:</string>
    <string name="calcular_peso_ideal">Calcular Peso Ideal</string>
    <string name="voltar_ao_inicio">Voltar ao inicio</string>
    <string name="peso_ideal_calculado">Peso ideal calculado:</string>
    <string name="peso_ideal">%1$s kg</string>
    <string name="imc_resultado">%1$s kcal</string>
    <string name="resumo_da_saude">Resumo da Saúde</string>
    <string name="imc_hist">IMC: -</string>
    <string name="peso_hist">Peso: -</string>
    <string name="categoria_hist">Categoria: -</string>
    <string name="gasto_hist">Gasto: -</string>
    <string name="nome_hist">Nome: -</string>
    <string name="frequencia_maxima">Frequência Máxima</string>
    <string-array name="nivel_atividade">
        <item>Sedentário</item>
        <item>Leve</item>
        <item>Moderado</item>
        <item>Intenso</item>
    </string-array>
</resources>