<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FormActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar_in"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/preencha_dados_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preencha_os_dados"
            android:textSize="35sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_in" />

        <EditText
            android:id="@+id/nome_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preencha_dados_tv" />

        <EditText
            android:id="@+id/sobrenome_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sobrenome"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nome_et" />

        <TextView
            android:id="@+id/data_nasc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_de_nascimento"
            android:padding="5dp"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sobrenome_et" />

        <DatePicker
            android:id="@+id/data_nasc_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/data_nasc_tv"/>


        <TextView
            android:id="@+id/sexo_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:padding="5dp"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/data_nasc_dp" />

        <RadioGroup
            android:id="@+id/sexo_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sexo_tv" >

            <RadioButton
                android:id="@+id/masculino_rb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/masculino"
                android:checked="true" />

            <RadioButton
                android:id="@+id/feminino_rb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feminino" />

        </RadioGroup>

        <TextView
            android:id="@+id/altura_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/altura"
            android:textSize="16sp"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sexo_rg"/>

        <com.wefika.horizontalpicker.HorizontalPicker
            android:id="@+id/altura_hp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="22sp"
            app:sideItems="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/altura_tv"/>

        <TextView
            android:id="@+id/peso_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            android:textSize="16sp"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/altura_hp"/>

        <com.wefika.horizontalpicker.HorizontalPicker
            android:id="@+id/peso_hp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="22sp"
            app:sideItems="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/peso_tv"/>

        <TextView
            android:id="@+id/nivel_atividade_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/nivel_atividade_fisica"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/peso_hp" />

        <Spinner
            android:id="@+id/nivel_atividade_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:entries="@array/nivel_atividade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nivel_atividade_tv" />

        <Button
            android:id="@+id/calcular_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calcular_imc"
            android:textSize="20sp"
            app:cornerRadius="12dp"
            app:iconPadding="0dp"
            android:backgroundTint="@color/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nivel_atividade_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>