<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PesoActivity">

    <include
        android:id="@+id/toolbar_in"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/peso_ideal_calculado"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_in" />

    <TextView
        android:id="@+id/nome_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/none"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <TextView
        android:id="@+id/peso_ideal_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textSize="48sp"
        android:text="@string/none"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nome_tv" />


    <Button
        android:id="@+id/resumo_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resumo_da_saude"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/peso_ideal_tv"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/voltar_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_bt"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>