<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.GastoCaloricoActivity">

    <include
        android:id="@+id/toolbar_in"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gasto_calorico_tv"
        android:layout_width= "match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textSize="24sp"
        android:text="@string/gasto_calorico_diario"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_in" />

    <TextView
        android:id="@+id/gasto_calorico_resultado_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textSize="48sp"
        android:text="@string/none"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gasto_calorico_tv" />

    <Button
        android:id="@+id/peso_ideal_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular_peso_ideal"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        app:iconPadding="0dp"
        android:backgroundTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/voltar_main_bt"
        android:layout_marginHorizontal="24dp" />

    <Button
        android:id="@+id/voltar_main_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        app:iconPadding="0dp"
        android:backgroundTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:id="@+id/gasto_calorico_img"
        android:layout_width="match_parent"
        android:layout_height="400sp"
        android:scaleType="centerCrop"
        android:src="@drawable/fogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gasto_calorico_resultado_tv"
        app:layout_constraintBottom_toTopOf="@id/voltar_main_bt"
        android:layout_marginTop="30dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>